# obs-plugintemplate

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  formatcode.sh
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Wingetfile  .build.zsh  Build-Windows.ps1  Package-Windows.ps1  build-macos  check-changes.sh  check-cmake.sh
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1  Setup-Obs.ps1
.github/scripts/utils.zsh/: check_linux  check_macos  check_packages  setup_obs
.github/workflows/: build-project.yaml  main.yml  push.yaml
ci/macos/: build-macos.sh  install-build-obs-macos.sh  install-dependencies-macos.sh
cmake/: ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: helpers_common.cmake
src/: gstreamer-encoder.c  gstreamer-filter.c  gstreamer-output.c  gstreamer-source.c  gstreamer.c  plugin-macros.h.in  plugin-main.c  plugin-main.cpp  plugin.h
